{{$NEXT}}

1.9       2014-01-20 13:05:18EST-0500 EST5EDT

 * Added a check in the Parser to make sure that all lines that share
   a single ID have the same type.

1.8       2013-10-28 10:57:26 EST5EDT

 * Fixed a bug in which feature lines with no ID, Parent, or
   Derives_from attributes were being returned as a bare hashref
   instead of a single-element arrayref as they should be.

1.7       2013-10-02 15:49:40 EST5EDT

 * Added `max_lookback` method to Parser, allowing applications to set
   a maximum number of features to be stored in case they might be
   referenced by features coming later in the file.  Can make it
   possible to parse GFF3 that does not contain enough '###'
   directives.

1.6       2013-07-26 11:24:16 EST5EDT

 * Improved the error message for when references between features
   cannot be resolved.  Instead of just Data::Dumper-ing the data
   structure, prints a formatted report of which references could not
   be resolved.

1.5       2012-12-14 12:40:58 America/New_York

 * Added minimum Test::More version of 0.88 to tests.

1.4       2012-08-28 15:09:51 America/New_York

 * Fix 1.0-backcompat crashing bug for GFF3 files with multi-location features.

1.3       2012-04-25 09:52:00 America/New_York

 * Correct synopsis section of Bio::GFF3::LowLevel::Parser.

1.2       2012-04-13 17:47:29 America/New_York

 * Removed unnecessary dependency on
   Bio::GFF3::Transform::SyncDirectives that was causing installation
   problems.

1.1       2012-04-13 01:32:21 America/New_York

 * Changed the default API of Bio::GFF3::LowLevel::Parser to support
   multi-loc features.  In order to be able to group feature lines
   that hand in some cases it would not be possibleave the same ID
   attribute, it now returns arrayrefs that are groups of the
   formerly-returned hashrefs.

 * HOWEVER, there is a backward-compatibility layer that back-converts
   the features to the conform to the return types in 1.1.  Existing