@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+ * Removed dependency on forking and IO::Pipe for handling implicit
+   FASTA section starts.  Should fix problems on Windows.  Thanks to
+   Francisco Ossandon for the fix!
+
 1.9       2014-01-20 13:05:18EST-0500 EST5EDT
 
  * Added a check in the Parser to make sure that all lines that share
